# worldgen

./: .gitignore  Cargo.toml  README.md  plan.md
examples/: exr_channels.ps1  exr_channels.sh  quickstart.ps1  quickstart.sh
src/: lib.rs  main.rs
src/biomes/: config.rs  mod.rs
src/climate/: coast.rs  config.rs  mod.rs  moisture.rs  temperature.rs  util.rs  wind.rs
src/erosion/: config.rs  mod.rs
src/erosion/cpu/: hydraulic.rs  mod.rs  priority_flood.rs  rivers.rs
src/erosion/wgpu/: context.rs  mod.rs  pipelines.rs
src/erosion/wgpu/shaders/: hydraulic.wgsl  neighbors.wgsl
src/export/: biome_map.rs  equirect.rs  exr.rs  mod.rs  normal_map.rs  plate_map.rs  png.rs  raw.rs
src/geometry/: cube_sphere.rs  face.rs  mod.rs  neighbors.rs  spherify.rs
src/noise/: fractal.rs  mod.rs
src/pipeline/: mod.rs  stage.rs
src/tectonics/: boundary.rs  config.rs  mod.rs  orogeny.rs  plate.rs  ridge.rs  subduction.rs  voronoi.rs
src/terrain/: heightmap.rs  mod.rs  planet.rs
tools/: blender_import_worldgen.py
