[package]
name = "worldgen"
version = "0.1.0"
edition = "2021"
description = "Procedural Earth-like planet generator"
license = "MIT"

[dependencies]
simdnoise = "3.1"
glam = { version = "0.30", features = ["bytemuck", "serde"] }
image = { version = "0.25", features = ["png"] }
exr = "1.74"
rayon = "1.11"
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
rand = "0.9"
rand_chacha = "0.9"
wgpu = "24"
pollster = "0.4"
winit = "0.30.12"

[dev-dependencies]
approx = "0.5"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
